--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@
     border: solid black;
   }
 
-    nav {
+  nav {
     background: linear-gradient(to right, rgb(0, 197, 204), rgb(48, 204, 0));
     background-repeat: no-repeat;
     position: fixed;
@@ -157,6 +157,7 @@
   nav.back {
     transform: translateX(0);
   }
+
   a {
     color: black;
     text-decoration: none;
@@ -216,7 +217,7 @@
     margin: 0;
     height: 100%;
     width: 100%;
-    background: linear-gradient(to right, rgb(0, 197, 204), rgb(48, 204, 0));
+    background: linear-gradient(to right, #00C0CC, #30CC00);
 
   }
 
@@ -283,15 +284,17 @@
 
   #logo {
     height: 98%;
+    width: auto;
   }
 
   h1 {
     font-size: 8em;
-    font-family: 'Marko One', serif;
+    font-family: 'Yeon Sung', cursive;
   }
 
   img.menu {
     height: 30em;
+    width: auto;
   }
 
   .container {
@@ -320,8 +323,8 @@
   }
 
   #bottom {
-    background-color: lightgray;
-    width: 20%;
+    width: 100%;
+    height: 10px;
     position: fixed;
     bottom: 0;
   }
@@ -351,10 +354,9 @@
     text-decoration: none;
   }
 
-  h4 {
+  #dinge {
     font-size: 4em;
     text-align: center;
-    border-radius: 10px;
   }
 
   #grid2 {
@@ -402,10 +404,6 @@
     margin: 0 0 0 4em;
   }
 
-  #ersteller {
-    bottom: 0;
-  }
-
   h3 {
     font-size: 2em;
   }
@@ -417,5 +415,13 @@
 
   #impresum {
     text-decoration: underline;
+  }
+
+  #noo {
+    margin: 0 0 10em 0;
+  }
+
+  h2 {
+    font-size: 3em;
   }
 }
